--- a/BugTracker/BugTrackerFrontend/Pages/Bugs/Details.cshtml
+++ b/BugTracker/BugTrackerFrontend/Pages/Bugs/Details.cshtml
@@ -35,9 +35,16 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bug.ReportedDate)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bug.Person.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bug.Person.Name)
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Bug?.BugId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Delete" asp-route-id="@Model.Bug?.BugId">Delete</a> |
+    <a asp-page="./../Index">Back to List</a>
 </div>
