--- a/BugTracker/BugTrackerFrontend/Pages/Bugs/Edit.cshtml
+++ b/BugTracker/BugTrackerFrontend/Pages/Bugs/Edit.cshtml
@@ -26,8 +26,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="Bug.State" class="control-label"></label>
-                <select asp-for="Bug.State" class="form-control"></select>
+
+                <select asp-for="Bug.State" class="form-control" 
+                    asp-items="Html.GetEnumSelectList<BugTrackerModel.BugState>()">
+                </select>
                 <span asp-validation-for="Bug.State" class="text-danger"></span>
+            </div>
+
+            @{
+                var x = 2;
+            }
+            <div class="form-group">
+                <label asp-for="SelectedAssigneePersonId" class="control-label"></label>
+                @Html.DropDownListFor(x => Model.SelectedAssigneePersonId, new SelectList(Model.AllAssignees, "PersonId", "Name"), htmlAttributes: new { @class = "form-control", id = "Assignee"})
+                <span asp-validation-for="SelectedAssigneePersonId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bug.ReportedDate" class="control-label"></label>
@@ -42,7 +54,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./../Index">Back to List</a>
 </div>
 
 @section Scripts {
